less/forum.less
@import "common/variables.less";
@import "forum/CustomDarkMode.less";
@import "forum/HeroSection";
@import "forum/DiscussionList.less";
@import "forum/DiscussionRow.less";
@import "forum/DiscussionHeader.less";
@import "forum/HeaderBack.less";
@import "forum/Logo.less";
@import "forum/CustomDiscussionTabNavigation.less";
@import "forum/CustomMobileDiscussionToolbar.less";
@import "forum/CustomSearch.less";
@import "forum/CustomButton.less";
@import "forum/CustomMobileNavigation.less";

.TextEditor-editorContainer {
  border: 1px solid #efefef;
  border-radius: 5px;
  padding: 10px;
}

.item-reply .Button {
  border: 2px solid white;
  border-radius: 4px;
}

@media (min-width: 1280px) {
  .container {
    width: 1280px !important;
  }
}

@media (min-width: 1440px) {
  .container {
    width: 1440px !important;
  }
}

